--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -394,18 +394,18 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=MC_Board.ioc
 ProjectManager.ProjectName=MC_Board
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x5000
-ProjectManager.TargetToolchain=MDK-ARM V5.32
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
-ProjectManager.UnderRoot=false
+ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM7_Init-TIM7-false-HAL-true,18-MX_USART3_UART_Init-USART3-false-HAL-true,19-MX_IWDG_Init-IWDG-false-HAL-true,20-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
