--- a/BSP/Robomaster_A/Robomaster_A.ioc
+++ b/BSP/Robomaster_A/Robomaster_A.ioc
@@ -56,9 +56,10 @@ Mcu.IP17=UART7
 Mcu.IP18=UART8
 Mcu.IP19=USART1
 Mcu.IP2=CAN2
-Mcu.IP20=USART3
-Mcu.IP21=USART6
-Mcu.IP22=USB_OTG_FS
+Mcu.IP20=USART2
+Mcu.IP21=USART3
+Mcu.IP22=USART6
+Mcu.IP23=USB_OTG_FS
 Mcu.IP3=DMA
 Mcu.IP4=I2C2
 Mcu.IP5=IWDG
@@ -66,7 +67,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SPI4
 Mcu.IP9=SYS
-Mcu.IPNb=23
+Mcu.IPNb=24
 Mcu.Name=STM32F427I(G-I)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PE2
@@ -77,64 +78,66 @@ Mcu.Pin12=PE6
 Mcu.Pin13=PB9
 Mcu.Pin14=PB7
 Mcu.Pin15=PB6
-Mcu.Pin16=PC11
-Mcu.Pin17=PC10
-Mcu.Pin18=PA12
-Mcu.Pin19=PI7
+Mcu.Pin16=PD6
+Mcu.Pin17=PC11
+Mcu.Pin18=PC10
+Mcu.Pin19=PA12
 Mcu.Pin2=PE0
-Mcu.Pin20=PI6
-Mcu.Pin21=PI5
-Mcu.Pin22=PG9
-Mcu.Pin23=PI2
-Mcu.Pin24=PA11
-Mcu.Pin25=PA10
-Mcu.Pin26=PF0
-Mcu.Pin27=PI0
-Mcu.Pin28=PH0/OSC_IN
-Mcu.Pin29=PH1/OSC_OUT
+Mcu.Pin20=PI7
+Mcu.Pin21=PI6
+Mcu.Pin22=PI5
+Mcu.Pin23=PG9
+Mcu.Pin24=PD5
+Mcu.Pin25=PI2
+Mcu.Pin26=PA11
+Mcu.Pin27=PA10
+Mcu.Pin28=PF0
+Mcu.Pin29=PI0
 Mcu.Pin3=PB8
-Mcu.Pin30=PF1
-Mcu.Pin31=PG8
-Mcu.Pin32=PG7
-Mcu.Pin33=PG6
-Mcu.Pin34=PF7
-Mcu.Pin35=PF6
-Mcu.Pin36=PH12
-Mcu.Pin37=PG5
-Mcu.Pin38=PG4
-Mcu.Pin39=PG3
+Mcu.Pin30=PH0/OSC_IN
+Mcu.Pin31=PH1/OSC_OUT
+Mcu.Pin32=PF1
+Mcu.Pin33=PG8
+Mcu.Pin34=PG7
+Mcu.Pin35=PG6
+Mcu.Pin36=PF7
+Mcu.Pin37=PF6
+Mcu.Pin38=PH12
+Mcu.Pin39=PG5
 Mcu.Pin4=PB5
-Mcu.Pin40=PH11
-Mcu.Pin41=PH10
-Mcu.Pin42=PD15
-Mcu.Pin43=PG2
-Mcu.Pin44=PC2
-Mcu.Pin45=PB2/BOOT1
-Mcu.Pin46=PG1
-Mcu.Pin47=PH6
-Mcu.Pin48=PD14
-Mcu.Pin49=PD13
+Mcu.Pin40=PG4
+Mcu.Pin41=PG3
+Mcu.Pin42=PH11
+Mcu.Pin43=PH10
+Mcu.Pin44=PD15
+Mcu.Pin45=PG2
+Mcu.Pin46=PC2
+Mcu.Pin47=PB2/BOOT1
+Mcu.Pin48=PG1
+Mcu.Pin49=PH6
 Mcu.Pin5=PG14
-Mcu.Pin50=PD12
-Mcu.Pin51=PA2
-Mcu.Pin52=PE11
-Mcu.Pin53=PB13
-Mcu.Pin54=PA3
-Mcu.Pin55=PF14
-Mcu.Pin56=VP_IWDG_VS_IWDG
-Mcu.Pin57=VP_SYS_VS_Systick
-Mcu.Pin58=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin59=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin50=PD14
+Mcu.Pin51=PD13
+Mcu.Pin52=PD12
+Mcu.Pin53=PA2
+Mcu.Pin54=PE11
+Mcu.Pin55=PB13
+Mcu.Pin56=PA3
+Mcu.Pin57=PF14
+Mcu.Pin58=VP_IWDG_VS_IWDG
+Mcu.Pin59=VP_SYS_VS_Systick
 Mcu.Pin6=PB3
-Mcu.Pin60=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin62=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin63=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin64=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin60=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin62=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin63=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin64=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin65=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin66=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin7=PA15
 Mcu.Pin8=PA14
 Mcu.Pin9=PA13
-Mcu.PinsNb=65
+Mcu.PinsNb=67
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F427IIHx
@@ -159,6 +162,7 @@ NVIC.TIM7_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.UART7_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.UART8_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -222,6 +226,10 @@ PD14.Signal=S_TIM4_CH3
 PD15.GPIOParameters=GPIO_Speed
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD15.Signal=S_TIM4_CH4
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
 PE0.Mode=Asynchronous
 PE0.Signal=UART8_RX
 PE1.Mode=Asynchronous
@@ -358,7 +366,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_UART8_Init-UART8-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true,16-MX_USART6_UART_Init-USART6-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_TIM1_Init-TIM1-false-HAL-true,19-MX_SPI4_Init-SPI4-false-HAL-true,20-MX_ADC1_Init-ADC1-false-HAL-true,21-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_UART8_Init-UART8-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true,16-MX_USART6_UART_Init-USART6-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_TIM1_Init-TIM1-false-HAL-true,19-MX_SPI4_Init-SPI4-false-HAL-true,20-MX_ADC1_Init-ADC1-false-HAL-true,21-MX_IWDG_Init-IWDG-false-HAL-true,22-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -488,6 +496,8 @@ USART1.Parity=PARITY_EVEN
 USART1.StopBits=STOPBITS_2
 USART1.VirtualMode=VM_ASYNC
 USART1.WordLength=WORDLENGTH_9B
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
