--- a/BSP/Robomaster_C/Robomaster_C.ioc
+++ b/BSP/Robomaster_C/Robomaster_C.ioc
@@ -421,6 +421,7 @@ PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=90
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -529,8 +530,8 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Prescaler,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,AutoReloadPreload
-TIM1.Period=19999
-TIM1.Prescaler=167
+TIM1.Period=20000-1
+TIM1.Prescaler=168-1
 TIM1.Pulse-PWM\ Generation1\ CH1=0
 TIM1.Pulse-PWM\ Generation2\ CH2=0
 TIM1.Pulse-PWM\ Generation3\ CH3=0
@@ -543,8 +544,9 @@ TIM3.IPParameters=Channel-PWM Generation3 CH3,Period
 TIM3.Period=8399
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.IPParameters=Channel-PWM Generation3 CH3,Prescaler,AutoReloadPreload
-TIM4.Prescaler=42-1
+TIM4.IPParameters=Channel-PWM Generation3 CH3,Prescaler,AutoReloadPreload,Period
+TIM4.Period=20000-1
+TIM4.Prescaler=84-1
 TIM5.IPParameters=Prescaler,Period
 TIM5.Period=65535
 TIM5.Prescaler=0
@@ -559,8 +561,8 @@ TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2,Channel-PWM Generation3 CH3,AutoReloadPreload
-TIM8.Period=19999
-TIM8.Prescaler=167
+TIM8.Period=20000-1
+TIM8.Prescaler=168-1
 TIM8.Pulse-PWM\ Generation2\ CH2=0
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
