--- a/BSP/Robomaster_A/Robomaster_A.ioc
+++ b/BSP/Robomaster_A/Robomaster_A.ioc
@@ -27,7 +27,13 @@ CAN2.CalculateTimeQuantum=71.42857142857143
 CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS2,BS1,Prescaler
 CAN2.Prescaler=3
 Dma.Request0=TIM1_UP
-Dma.RequestsNb=1
+Dma.Request1=UART7_RX
+Dma.Request2=UART7_TX
+Dma.Request3=UART8_RX
+Dma.Request4=UART8_TX
+Dma.Request5=USART6_RX
+Dma.Request6=USART6_TX
+Dma.RequestsNb=7
 Dma.TIM1_UP.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_UP.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM1_UP.0.Instance=DMA2_Stream5
@@ -38,6 +44,66 @@ Dma.TIM1_UP.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM1_UP.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM1_UP.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.TIM1_UP.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART7_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART7_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART7_RX.1.Instance=DMA1_Stream3
+Dma.UART7_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART7_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART7_RX.1.Mode=DMA_NORMAL
+Dma.UART7_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART7_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART7_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART7_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART7_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART7_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART7_TX.2.Instance=DMA1_Stream1
+Dma.UART7_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART7_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.UART7_TX.2.Mode=DMA_NORMAL
+Dma.UART7_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART7_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.UART7_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.UART7_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART8_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART8_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART8_RX.3.Instance=DMA1_Stream6
+Dma.UART8_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART8_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.UART8_RX.3.Mode=DMA_NORMAL
+Dma.UART8_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART8_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.UART8_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.UART8_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART8_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART8_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART8_TX.4.Instance=DMA1_Stream0
+Dma.UART8_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART8_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.UART8_TX.4.Mode=DMA_NORMAL
+Dma.UART8_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART8_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.UART8_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.UART8_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.5.Instance=DMA2_Stream1
+Dma.USART6_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.5.Mode=DMA_NORMAL
+Dma.USART6_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.6.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.6.Instance=DMA2_Stream6
+Dma.USART6_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.6.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.6.Mode=DMA_NORMAL
+Dma.USART6_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.6.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -148,7 +214,13 @@ NVIC.CAN1_RX0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.CAN1_TX_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.CAN2_RX0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.CAN2_TX_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream5_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -366,7 +438,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_UART8_Init-UART8-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true,16-MX_USART6_UART_Init-USART6-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_TIM1_Init-TIM1-false-HAL-true,19-MX_SPI4_Init-SPI4-false-HAL-true,20-MX_ADC1_Init-ADC1-false-HAL-true,21-MX_IWDG_Init-IWDG-false-HAL-true,22-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_UART8_Init-UART8-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true,16-MX_USART6_UART_Init-USART6-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_TIM1_Init-TIM1-false-HAL-true,19-MX_SPI4_Init-SPI4-false-HAL-true,20-MX_ADC1_Init-ADC1-false-HAL-true,21-MX_IWDG_Init-IWDG-false-HAL-true,22-MX_TIM7_Init-TIM7-false-HAL-true,23-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
