--- a/BSP/MC_Board/MC_Board.ioc
+++ b/BSP/MC_Board/MC_Board.ioc
@@ -71,6 +71,8 @@ Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FREERTOS.IPParameters=Tasks01
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -78,25 +80,26 @@ Mcu.CPN=STM32F446RCT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=SPI2
-Mcu.IP11=SYS
-Mcu.IP12=TIM2
-Mcu.IP13=TIM3
-Mcu.IP14=TIM7
-Mcu.IP15=TIM8
-Mcu.IP16=UART5
-Mcu.IP17=USART1
-Mcu.IP18=USART2
-Mcu.IP19=USART3
+Mcu.IP10=SPI1
+Mcu.IP11=SPI2
+Mcu.IP12=SYS
+Mcu.IP13=TIM2
+Mcu.IP14=TIM3
+Mcu.IP15=TIM7
+Mcu.IP16=TIM8
+Mcu.IP17=UART5
+Mcu.IP18=USART1
+Mcu.IP19=USART2
 Mcu.IP2=CAN2
+Mcu.IP20=USART3
 Mcu.IP3=DMA
-Mcu.IP4=I2C1
-Mcu.IP5=I2C3
-Mcu.IP6=IWDG
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SPI1
-Mcu.IPNb=20
+Mcu.IP4=FREERTOS
+Mcu.IP5=I2C1
+Mcu.IP6=I2C3
+Mcu.IP7=IWDG
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=21
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -141,47 +144,51 @@ Mcu.Pin43=PB6
 Mcu.Pin44=PB7
 Mcu.Pin45=PB8
 Mcu.Pin46=PB9
-Mcu.Pin47=VP_IWDG_VS_IWDG
-Mcu.Pin48=VP_SYS_VS_Systick
-Mcu.Pin49=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin47=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin48=VP_IWDG_VS_IWDG
+Mcu.Pin49=VP_SYS_VS_Systick
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin50=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=51
+Mcu.PinsNb=52
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.CAN1_RX0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.CAN1_TX_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.CAN2_RX0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.CAN2_TX_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.EXTI3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.CAN1_TX_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.CAN2_RX0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.CAN2_TX_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM7_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.UART5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.TIM7_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.UART5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA0-WKUP.GPIO_Mode=GPIO_MODE_ANALOG
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
@@ -503,6 +510,8 @@ USART3.Parity=PARITY_EVEN
 USART3.StopBits=STOPBITS_2
 USART3.VirtualMode=VM_ASYNC
 USART3.WordLength=WORDLENGTH_9B
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
