--- a/BSP/Robomaster_C/Robomaster_C.ioc
+++ b/BSP/Robomaster_C/Robomaster_C.ioc
@@ -109,8 +109,10 @@ Dma.USART6_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART6_TX.4.PeriphInc=DMA_PINC_DISABLE
 Dma.USART6_TX.4.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART6_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FREERTOS.IPParameters=Tasks01
+FREERTOS.IPParameters=Tasks01,configUSE_POSIX_ERRNO,configUSE_APPLICATION_TASK_TAG
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configUSE_APPLICATION_TASK_TAG=1
+FREERTOS.configUSE_POSIX_ERRNO=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Mode=I2C_Fast
