--- a/BSP/Robomaster_C/Robomaster_C.ioc
+++ b/BSP/Robomaster_C/Robomaster_C.ioc
@@ -109,8 +109,9 @@ Dma.USART6_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART6_TX.4.PeriphInc=DMA_PINC_DISABLE
 Dma.USART6_TX.4.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART6_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FREERTOS.IPParameters=Tasks01,configUSE_POSIX_ERRNO,configUSE_APPLICATION_TASK_TAG
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configUSE_POSIX_ERRNO,configUSE_APPLICATION_TASK_TAG,FootprintOK
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;MicroROSTask,24,3000,StartMicroROSTask,As external,NULL,Static,MicroROSTaskBuffer,MicroROSTaskControlBlock
 FREERTOS.configUSE_APPLICATION_TASK_TAG=1
 FREERTOS.configUSE_POSIX_ERRNO=1
 File.Version=6
@@ -441,7 +442,7 @@ ProjectManager.DeviceId=STM32F407IGHx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x10000
+ProjectManager.HeapSize=0x5000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -453,7 +454,7 @@ ProjectManager.ProjectFileName=Robomaster_C.ioc
 ProjectManager.ProjectName=Robomaster_C
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x8000
+ProjectManager.StackSize=0x3000
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.TemplateDestinationPath=F\:\\\u4EA4\u5927\\robomaster\\\u6821\u961F\\Development-Board-C-Examples\\standard_robot
 ProjectManager.TemplateSourcePath=D\:\\Stm32Cube5.2.1\\db\\extra_templates
@@ -461,7 +462,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_CAN2_Init-CAN2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_I2C3_Init-I2C3-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM10_Init-TIM10-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART6_UART_Init-USART6-false-HAL-true,19-MX_TIM6_Init-TIM6-false-HAL-true,20-MX_IWDG_Init-IWDG-false-HAL-true,21-MX_TIM7_Init-TIM7-false-HAL-true,22-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_CAN2_Init-CAN2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_I2C3_Init-I2C3-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM10_Init-TIM10-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART6_UART_Init-USART6-false-HAL-true,19-MX_TIM6_Init-TIM6-false-HAL-true,20-MX_TIM7_Init-TIM7-false-HAL-true,21-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -609,3 +610,4 @@ VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
+rtos.0.ip=FREERTOS
